# alpha-lake

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  RELEASE_NOTES_v0.1.0-alpha.2.md  compose.yaml  flake.nix  justfile  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
.opencode/: opencode.json
.opencode/skills/add-dataset/: SKILL.md
.opencode/skills/alpha-lake-invariants/: SKILL.md
.opencode/skills/alpha-lake-polars-patito/: SKILL.md
.opencode/skills/alpha-lake-python-toolchain/: SKILL.md
.opencode/skills/connector/: SKILL.md
.opencode/skills/dataset-contract/: SKILL.md
.opencode/skills/golden-replay/: SKILL.md
.opencode/skills/patito-fact/: SKILL.md
.opencode/skills/pit-reader/: SKILL.md
.opencode/skills/rest-transport/: SKILL.md
.opencode/skills/serving-kernel/: SKILL.md
.opencode/skills/stack-ops/: SKILL.md
.stack/otel/: otel-collector.yaml
.stack/postgres/: init.sql
config/: embedded.toml  stack.toml  threshold_profiles.toml
contracts/: analyst_estimates.v1.yaml  bars.v1.yaml  congress_trades.v1.yaml  economic_calendar.v1.yaml  fundamental_metrics.v1.yaml  fundamentals.v1.yaml  macro_series.v1.yaml  market_breadth.v1.yaml  news_articles.v1.yaml  relative_strength.v1.yaml  technical_indicators.v1.yaml  vol_term_structure.v1.yaml
docs/: DESIGN.md  GLOSSARY.md  air-gap-deployment.md  api-keys.md  operations.md  product-tiers.md  production.md  promotion-gates.md  retention-privacy-policy.md  serving-api.md  source-health.md  symbol-readouts.md
docs/adr/: 0001-ducklake-as-lakehouse-format.md  0002-tri-temporal-tracking-model.md  0003-scd2-on-knowledge-time-boundary.md  0004-deterministic-replay-via-content-addressed-archive.md  0005-security-master-pit-resolution.md  0006-read-time-adjusted-price-computation.md  0007-embedded-sqlite-local-fs-harness.md  0008-dlt-for-ingestion-framework.md  0009-fact-store-not-feature-store.md  0010-flow-functions-typer-first-dagster-later.md  0011-opentelemetry-otlp-collector-console-harness.md  0012-stack-first-compose-vendored-deps.md  0013-nix-flake-hermetic-reproducibility.md  0014-source-registry-as-data.md  0015-embedded-mode-demoted-to-harness.md  0016-kubernetes-future-target.md  0017-derived-technical-indicator-library.md  0018-text-derived-analytics-layer.md  0019-polars-patito-dataframe-validation.md  0020-trading-calendar-timezone-policy.md  0021-snapshot-retention-compaction-reproducibility.md  0022-blob-store.md  0023-dataset-descriptor-unified-write.md  0024-serving-architecture-kernel-rest.md  0025-dataset-support-tiers.md  0026-idempotent-ingestion.md  0027-idempotent-ingestion.md  0027-structured-logging-replaces-otel.md  0030-alpha-vantage-integration.md  0031-neutral-facts-bundle-api.md  README.md  template.md
docs/design/: dagster-partition-scheme.md  data-job-worker.md
docs/gates/: README.md  epic-0-refinement-gate.md  epic-1-refinement-gate.md  epic-2-refinement-gate.md  epic-5-refinement-gate.md  epic-7-refinement-gate.md
docs/gates/history/: epic-1-refinement-gate.md  epic-3-refinement-gate.md  epic-308-architectural-coherence.md  epic-374-refinement-gate.md  epic-4-refinement-gate.md  epic-400-refinement-gate.md  epic-415-refinement-gate.md  epic-424-refinement-gate.md  epic-6-refinement-gate.md
src/alpha_lake/: __main__.py  calendar_.py  cli.py  cli_ui.py  clock.py  config.py  dagster_assets.py  duckdb_ext.py  harness.py  interop.py  obs.py  secrets.py  source_registry.py
src/alpha_lake/canonical/: __init__.py
src/alpha_lake/catalog/: __init__.py  schema.sql
src/alpha_lake/connectors/: __init__.py  alpaca_bars.py  alpaca_base.py  alphav.py  apewisdom.py  base.py  corp_actions_eodhd.py  corp_actions_tiingo.py  dlt_source.py  eodhd.py  eodhd_earnings.py  eodhd_fundamentals.py  eodhd_news.py  finnhub.py  finnhub_earnings.py  fmp.py  fred.py  marketaux.py  openfigi.py  quiver.py  reddit.py  sec_edgar.py  sec_insider.py  stocktwits.py  tiingo.py  tiingo_fundamentals.py  tiingo_news.py  yahoo.py
src/alpha_lake/derived/: __init__.py  annotations.py  compute.py  event_aggregations.py  fundamental_metrics.py  indicators.py  macro_transforms.py  market_breadth.py  relative_strength.py  serving.py  text_serving.py  vol_term_structure.py
src/alpha_lake/fixtures/: __init__.py  __main__.py
src/alpha_lake/flows/: __init__.py  bootstrap.py
src/alpha_lake/interpretation/: __init__.py  fundamentals_glossary.py  profiles.py  (+1 more)
tests/: conftest.py  fixtures.py
tests/boundary/: test_adjusted_price_leakage.py  test_adjusted_views.py  test_bitemporal_properties.py  test_bitemporal_visibility.py  test_hash_stability.py  test_leakage_edge.py
tests/contract/: test_connector_contract.py  test_fundamental_metrics_contract.py  test_fundamentals_contract.py
tests/integration/: conftest.py  test_harness_equivalence.py  test_live_sources.py  test_mode_parity.py  test_restatement.py
tests/interpretation/: test_profiles.py  test_readouts.py
tests/replay/: conftest.py  test_fundamentals_replay.py  test_golden_replay.py  test_indicators_replay.py  test_readouts_replay.py
tests/transport/: test_dashboard.py
tests/unit/: test_adjusted_views.py  test_analyst_estimates.py  test_calendar_shift.py  test_catalog.py  test_catalog_api.py  test_clock.py  test_config.py  test_congress_trades.py  test_corp_actions.py  test_dataset_models.py  test_dataset_pipelines.py  test_duckdb_ext.py  test_economic_calendar.py  test_estimate_metrics_compute.py  test_event_aggregations.py  test_flows.py  test_fundamental_glossary.py  test_fundamental_metric_fact.py  test_fundamental_metrics_compute.py  test_fundamentals_serving.py  test_fundamentals_ui.py  test_imports.py  test_indicators.py  test_interop.py  test_jobs_handlers.py  test_jobs_scheduler.py  test_jobs_store.py  test_kernel.py  test_macro_series.py  test_macro_transforms.py  test_market_breadth.py  test_news_articles.py  test_quota_budget.py  test_relative_strength.py  test_secrets.py  test_security_master.py  test_serving.py  test_technical_indicators.py  test_transport.py  test_vol_term_structure.py
(+64 files in other folders)
