[project]
name = "alpha-lake"
version = "0.1.0-alpha.1"
description = "Stack-first bitemporal market-data lakehouse"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "M. Blaauw" }]

dependencies = [
    "polars>=1.0",
    "patito>=0.5",
    "duckdb>=1.2",
    "httpx>=0.28",
    "tenacity>=9.0",
    "typer>=0.15",
    "pyarrow>=18.0",
    "pydantic>=2.0",
    "exchange-calendars>=4.0",
    "zstd>=1.5",
    "psycopg2-binary>=2.9.12",
    "fsspec>=2024.0",
    "s3fs>=2024.0",
    "pytz>=2024.0",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.30",
    "opentelemetry-sdk>=1.30",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30",
]
server = [
    "fastapi>=0.115",
    "fastapi-mcp>=0.4.0",
    "uvicorn[standard]>=0.34",
]
dev = [
    "fastapi>=0.115",
    "ruff>=0.9",
    "ty>=0.0.49",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "import-linter>=2.0",
    "httpx>=0.28",
]

[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]

[tool.ruff.lint.per-file-ignores]
"**/_glossary.py" = ["E501"]

[tool.ty.environment]
python-version = "3.13"
root = ["src"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
possibly-unresolved-reference = "error"
invalid-argument-type = "error"
missing-argument = "error"
invalid-return-type = "error"
unused-ignore-comment = "warn"

[[tool.ty.overrides]]
include = ["src/alpha_lake/transport/**"]

[tool.ty.overrides.rules]
possibly-unresolved-reference = "warn"

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
possibly-unresolved-reference = "warn"
unresolved-import = "warn"

[tool.importlinter]
root_package = "alpha_lake"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "layer-rules"
type = "layers"
containers = "alpha_lake"
layers = [
    "cli",
    "fixtures",
    "flows",
    "harness",
    "transport",
    "serving",
    "replay",
    "catalog",
    "quality",
    "canonical",
    "normalize",
    "raw",
    "connectors",
    "kernel",
    "source_registry",
    "clock",
    "storage",
    "config",
    "obs",
    "calendar_",
    "interop",
    "models",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "live: mark test as a live API integration test (skipped unless --run-live is passed)",
]

[tool.typer]
app_name = "alpha-lake"

[project.scripts]
alpha-lake = "alpha_lake.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "dagster>=1.10",
    "dagster-duckdb>=0.25",
    "hypothesis>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]
